<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        style="@style/AppTheme"
        android:id="@+id/Registro"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">

            <com.google.android.gms.maps.MapView
                android:id="@+id/mapViewHotel"
                android:layout_width="match_parent"
                android:background="@color/colorPlomo"
                android:layout_height="200dp"/>

            <com.github.florent37.materialtextfield.MaterialTextField
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:mtf_labelColor="#666"
                app:mtf_hasFocus="true"
                android:layout_marginTop="10dp"
                app:mtf_image="@drawable/destino">

                <EditText
                    android:id="@+id/NombreHotelEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/addNombreHotel"
                    android:inputType="text" />

            </com.github.florent37.materialtextfield.MaterialTextField>
            <com.github.florent37.materialtextfield.MaterialTextField
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:mtf_labelColor="#666"
                app:mtf_hasFocus="true"
                android:layout_marginTop="5dp"
                app:mtf_image="@drawable/description">

                <EditText
                    android:id="@+id/UbicacionHotelEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/addUbicacionHotel"
                    android:inputType="text"/>

            </com.github.florent37.materialtextfield.MaterialTextField>
            <com.github.florent37.materialtextfield.MaterialTextField
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:mtf_labelColor="#666"
                app:mtf_hasFocus="true"
                android:layout_marginTop="5dp"
                app:mtf_image="@drawable/dinero">

                <EditText
                    android:id="@+id/PrecioHotelEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/addPrecioHotel"
                    android:inputType="text"/>

            </com.github.florent37.materialtextfield.MaterialTextField>
            <com.github.florent37.materialtextfield.MaterialTextField
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:mtf_labelColor="#666"
                app:mtf_hasFocus="true"
                android:layout_marginTop="5dp"
                app:mtf_image="@drawable/phone">

                <EditText
                    android:id="@+id/TelefonoHotelEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/addTelefHotel"
                    android:inputType="text"/>

            </com.github.florent37.materialtextfield.MaterialTextField>
            <com.github.florent37.materialtextfield.MaterialTextField
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:mtf_labelColor="#666"
                app:mtf_hasFocus="true"
                android:layout_marginTop="5dp"
                app:mtf_image="@drawable/description">

                <EditText
                    android:id="@+id/DescripcionHotelEdit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/addDescrip"
                    android:inputType="text"/>

            </com.github.florent37.materialtextfield.MaterialTextField>

        </LinearLayout>

    </ScrollView>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="0dp"
        android:id="@+id/EditarHotel"
        card_view:cardBackgroundColor="@color/colorPrimary">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edit"
            android:textStyle="bold|italic"
            android:typeface="serif"
            android:textSize="22sp"
            android:textColor="#fff"
            android:layout_margin="10dp"
            android:gravity="center_horizontal"/>

    </android.support.v7.widget.CardView>

</LinearLayout>