<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPlomo">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.gms.maps.MapView
            android:id="@+id/mapaHotel"
            android:layout_width="match_parent"
            android:layout_height="217dp"
            android:background="@drawable/fondo_mapa" />

        <LinearLayout
            android:layout_width="110dp"
            android:layout_height="150dp"
            android:orientation="vertical"
            android:layout_marginTop="-159dp"
            android:layout_marginRight="6dp"
            android:layout_marginStart="6dp"
            android:layout_marginLeft="6dp"
            android:layout_marginEnd="6dp">

            <ImageView
                android:id="@+id/imgHotel"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:contentDescription="@string/addDescrip"
                android:visibility="invisible"/>

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/addImgHotel"
                app:fabSize="mini"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="-47dp"
                app:backgroundTint="@color/colorPrimary"
                app:rippleColor="@color/colorWhite"
                app:srcCompat="@drawable/add_img"
                tools:ignore="VectorDrawableCompat" />

        </LinearLayout>

        <ScrollView
            style="@style/AppTheme"
            android:id="@+id/Registro"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:visibility="visible">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="8dp"
                android:orientation="vertical">

                <com.github.florent37.materialtextfield.MaterialTextField
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:mtf_labelColor="#666"
                    app:mtf_hasFocus="true"
                    android:layout_marginTop="10dp"
                    app:mtf_image="@drawable/mapa">

                    <EditText
                        android:id="@+id/NombreHotel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/addNombreHotel"
                        android:inputType="text" />

                </com.github.florent37.materialtextfield.MaterialTextField>

                <com.github.florent37.materialtextfield.MaterialTextField
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:mtf_labelColor="#666"
                    app:mtf_hasFocus="true"
                    android:layout_marginTop="10dp"
                    app:mtf_image="@drawable/mapa">

                    <EditText
                        android:id="@+id/UbicacionHotel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/addUbicacionHotel"
                        android:inputType="text" />

                </com.github.florent37.materialtextfield.MaterialTextField>

                <com.github.florent37.materialtextfield.MaterialTextField
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:mtf_labelColor="#666"
                    app:mtf_hasFocus="true"
                    android:layout_marginTop="10dp"
                    app:mtf_image="@drawable/dinero">

                    <EditText
                        android:id="@+id/PrecioHotel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/addPrecioHotel"
                        android:inputType="text" />

                </com.github.florent37.materialtextfield.MaterialTextField>

                <com.github.florent37.materialtextfield.MaterialTextField
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:mtf_labelColor="#666"
                    app:mtf_hasFocus="true"
                    android:layout_marginTop="5dp"
                    app:mtf_image="@drawable/phone">

                    <EditText
                        android:id="@+id/TelefonoHotel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/addTelefHotel"
                        android:inputType="text"/>

                </com.github.florent37.materialtextfield.MaterialTextField>

                <com.github.florent37.materialtextfield.MaterialTextField
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:mtf_labelColor="#666"
                    app:mtf_hasFocus="true"
                    android:layout_marginTop="5dp"
                    app:mtf_image="@drawable/description">

                    <EditText
                        android:id="@+id/DescripcionHotel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/addDescripHotel"
                        android:inputType="text"/>

                </com.github.florent37.materialtextfield.MaterialTextField>

                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    card_view:cardCornerRadius="0dp"
                    android:layout_marginTop="10dp"
                    android:id="@+id/addHotel"
                    card_view:cardBackgroundColor="@color/colorPrimary">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/addHotel"
                        android:textStyle="bold|italic"
                        android:typeface="serif"
                        android:textSize="22sp"
                        android:textColor="#fff"
                        android:layout_margin="10dp"
                        android:gravity="center_horizontal"/>

                </android.support.v7.widget.CardView>

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</RelativeLayout>